--- a/docker-compose-projeto/docker-compose.yaml
+++ b/docker-compose-projeto/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
      - 5000:5432
    restart: always
    volumes:
-     - ./vol-db:/var/lib/postgres
+     - ./vol-db:/var/lib/postgresql/data
    networks:
      - backend
 networks:
