--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -84,6 +84,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>spring-usuarios</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
