--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-API_DATABASE_URL=jdbc:postgresql://db:5432/usuario_saldos
+API_DATABASE_URL=jdbc:postgresql://db:5432/usuario_saldos_prod
 API_DATABASE_USERNAME=gabriel
 API_DATABASE_PASSWORD=gabriel
 API_DATABASE_DDL_AUTO=update
@@ -8,4 +8,4 @@ API_DATABASE_FORMAT_SQL=true
 TZ=America/Sao_Paulo
 POSTGRES_USER=gabriel
 POSTGRES_PASSWORD=gabriel
-POSTGRES_DB=usuario_saldos
+POSTGRES_DB=usuario_saldos_prod
