--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -142,6 +142,13 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.8</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*QUsuario.class</exclude>
+						<exclude>**/*QSaque.class</exclude>
+						<exclude>**/*QSaldo.class</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
