Ajustes projeto, adição de flyway, dockerfile e paginação das consultas

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build: .
     container_name: spring-usuarios-saldos
     environment:
-      - SPRING_PROFILES_ACTIVE=prod
+      - SPRING_PROFILES_ACTIVE=${API_PROD}
       - API_DATABASE_URL=${API_DATABASE_URL}
       - API_DATABASE_USERNAME=${API_DATABASE_USERNAME}
       - API_DATABASE_PASSWORD=${API_DATABASE_PASSWORD}
@@ -12,6 +12,7 @@ services:
       - API_DATABASE_DIALECT=${API_DATABASE_DIALECT}
       - API_DATABASE_SHOW_SQL=${API_DATABASE_SHOW_SQL}
       - API_DATABASE_FORMAT_SQL=${API_DATABASE_FORMAT_SQL}
+      - API_DATABASE_DEFER_DATASOURCE=${API_DATABASE_DEFER_DATASOURCE}
     ports:
       - "8282:8080"
     networks:
