--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
+API_PROD=prod
 API_DATABASE_URL=jdbc:postgresql://db:5432/usuario_saldos_prod
 API_DATABASE_USERNAME=gabriel
 API_DATABASE_PASSWORD=gabriel
@@ -9,3 +10,4 @@ TZ=America/Sao_Paulo
 POSTGRES_USER=gabriel
 POSTGRES_PASSWORD=gabriel
 POSTGRES_DB=usuario_saldos_prod
+API_DATABASE_DEFER_DATASOURCE=true
