--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -111,6 +111,12 @@
 			<version>3.12.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<dependencyManagement>
