Ajustes banco de test h2

--- a/backend/src/main/resources/application-test.yaml
+++ b/backend/src/main/resources/application-test.yaml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS DBO
     username: sa
     password: sa
   jpa:
@@ -13,3 +13,5 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  flyway:
+    enabled: false
