--- a/backend/src/main/resources/application-test.yaml
+++ b/backend/src/main/resources/application-test.yaml
@@ -15,6 +15,11 @@ spring:
         format_sql: true
   flyway:
     enabled: false
+cache:
+  type: redis
+redis:
+  host: localhost
+  port: 6379
 
 feriados:
   nacionais:
