--- a/backend/src/test/resources/application-test.yaml
+++ b/backend/src/test/resources/application-test.yaml
@@ -1,3 +1,6 @@
+server:
+  port: 8081
+
 spring:
   datasource:
     driverClassName: org.h2.Driver
@@ -15,11 +18,6 @@ spring:
         format_sql: true
   flyway:
     enabled: false
-  cache:
-    type: redis
-  redis:
-    host: localhost
-    port: 6378
 
 feriados:
   nacionais:
