--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -126,6 +126,12 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>br.com.caelum.stella</groupId>
+			<artifactId>caelum-stella-core</artifactId>
+			<version>2.1.5</version>
+		</dependency>
+
 
 	</dependencies>
 
